// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CODEBLOCKS COMPONENT renders correctly 1`] = `
<div
  className="my-5 relative group"
>
  <div
    aria-label="Copy to clipboard"
    className="absolute top-3 right-3 group-hover:opacity-100 opacity-0 transform-gpu transition duration-200 group-hover:block"
    title="Copy to clipboard"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-copy fa-fw fa-xl cursor-pointer p-2 bg-slate-500 hover:bg-slate-600 border-2 border-slate-500 hover:border-slate-800 duration-200 rounded-lg active:bg-slate-50"
      data-icon="copy"
      data-prefix="fad"
      focusable="false"
      onClick={[Function]}
      role="img"
      style={{}}
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        className="fa-duotone-group"
        style={{}}
      >
        <path
          className="fa-secondary"
          d="M512 96v240c0 26.51-21.49 48-48 48h-192c-26.51 0-48-21.49-48-48v-288c0-26.51 21.49-48 48-48H416v96H512z"
          fill="currentColor"
          style={{}}
        />
        <path
          className="fa-primary"
          d="M192 352V128h-144c-26.51 0-48 21.49-48 48v288c0 26.51 21.49 48 48 48h192c26.51 0 48-21.49 48-48L288 416h-32C220.7 416 192 387.3 192 352zM416 0v96h96L416 0z"
          fill="currentColor"
          style={{}}
        />
      </g>
    </svg>
  </div>
  <pre
    className="prism-code language-typescript code "
    style={
      {
        "backgroundColor": "#011627",
        "color": "#d6deeb",
      }
    }
  >
    <div
      className="token-line"
      style={
        {
          "backgroundColor": null,
          "color": "#d6deeb",
        }
      }
    >
      <span>
        <span
          className="token plain"
          style={
            {
              "display": "inline-block",
            }
          }
        >
          

        </span>
      </span>
    </div>
  </pre>
</div>
`;

exports[`CODEBLOCKS COMPONENT renders highlight 1`] = `
<div
  className="my-5 relative group"
>
  <div
    aria-label="Copy to clipboard"
    className="absolute top-3 right-3 group-hover:opacity-100 opacity-0 transform-gpu transition duration-200 group-hover:block"
    title="Copy to clipboard"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-copy fa-fw fa-xl cursor-pointer p-2 bg-slate-500 hover:bg-slate-600 border-2 border-slate-500 hover:border-slate-800 duration-200 rounded-lg active:bg-slate-50"
      data-icon="copy"
      data-prefix="fad"
      focusable="false"
      onClick={[Function]}
      role="img"
      style={{}}
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        className="fa-duotone-group"
        style={{}}
      >
        <path
          className="fa-secondary"
          d="M512 96v240c0 26.51-21.49 48-48 48h-192c-26.51 0-48-21.49-48-48v-288c0-26.51 21.49-48 48-48H416v96H512z"
          fill="currentColor"
          style={{}}
        />
        <path
          className="fa-primary"
          d="M192 352V128h-144c-26.51 0-48 21.49-48 48v288c0 26.51 21.49 48 48 48h192c26.51 0 48-21.49 48-48L288 416h-32C220.7 416 192 387.3 192 352zM416 0v96h96L416 0z"
          fill="currentColor"
          style={{}}
        />
      </g>
    </svg>
  </div>
  <pre
    className="prism-code language-typescript code "
    style={
      {
        "backgroundColor": "#011627",
        "color": "#d6deeb",
      }
    }
  >
    <div
      className="token-line"
      style={
        {
          "backgroundColor": null,
          "color": "#d6deeb",
        }
      }
    >
      <span>
        <span
          className="token plain"
          style={
            {
              "display": "inline-block",
            }
          }
        >
          

        </span>
      </span>
    </div>
  </pre>
</div>
`;

exports[`CODEBLOCKS COMPONENT renders highlight range 1`] = `
<div
  className="my-5 relative group"
>
  <div
    aria-label="Copy to clipboard"
    className="absolute top-3 right-3 group-hover:opacity-100 opacity-0 transform-gpu transition duration-200 group-hover:block"
    title="Copy to clipboard"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-copy fa-fw fa-xl cursor-pointer p-2 bg-slate-500 hover:bg-slate-600 border-2 border-slate-500 hover:border-slate-800 duration-200 rounded-lg active:bg-slate-50"
      data-icon="copy"
      data-prefix="fad"
      focusable="false"
      onClick={[Function]}
      role="img"
      style={{}}
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        className="fa-duotone-group"
        style={{}}
      >
        <path
          className="fa-secondary"
          d="M512 96v240c0 26.51-21.49 48-48 48h-192c-26.51 0-48-21.49-48-48v-288c0-26.51 21.49-48 48-48H416v96H512z"
          fill="currentColor"
          style={{}}
        />
        <path
          className="fa-primary"
          d="M192 352V128h-144c-26.51 0-48 21.49-48 48v288c0 26.51 21.49 48 48 48h192c26.51 0 48-21.49 48-48L288 416h-32C220.7 416 192 387.3 192 352zM416 0v96h96L416 0z"
          fill="currentColor"
          style={{}}
        />
      </g>
    </svg>
  </div>
  <pre
    className="prism-code language-typescript code "
    style={
      {
        "backgroundColor": "#011627",
        "color": "#d6deeb",
      }
    }
  >
    <div
      className="token-line"
      style={
        {
          "backgroundColor": null,
          "color": "#d6deeb",
        }
      }
    >
      <span>
        <span
          className="token plain"
          style={
            {
              "display": "inline-block",
            }
          }
        >
          

        </span>
      </span>
    </div>
  </pre>
</div>
`;

exports[`CODEBLOCKS COMPONENT renders line numbers 1`] = `
<div
  className="my-5 relative group"
>
  <div
    aria-label="Copy to clipboard"
    className="absolute top-3 right-3 group-hover:opacity-100 opacity-0 transform-gpu transition duration-200 group-hover:block"
    title="Copy to clipboard"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-copy fa-fw fa-xl cursor-pointer p-2 bg-slate-500 hover:bg-slate-600 border-2 border-slate-500 hover:border-slate-800 duration-200 rounded-lg active:bg-slate-50"
      data-icon="copy"
      data-prefix="fad"
      focusable="false"
      onClick={[Function]}
      role="img"
      style={{}}
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        className="fa-duotone-group"
        style={{}}
      >
        <path
          className="fa-secondary"
          d="M512 96v240c0 26.51-21.49 48-48 48h-192c-26.51 0-48-21.49-48-48v-288c0-26.51 21.49-48 48-48H416v96H512z"
          fill="currentColor"
          style={{}}
        />
        <path
          className="fa-primary"
          d="M192 352V128h-144c-26.51 0-48 21.49-48 48v288c0 26.51 21.49 48 48 48h192c26.51 0 48-21.49 48-48L288 416h-32C220.7 416 192 387.3 192 352zM416 0v96h96L416 0z"
          fill="currentColor"
          style={{}}
        />
      </g>
    </svg>
  </div>
  <pre
    className="prism-code language-typescript code "
    style={
      {
        "backgroundColor": "#011627",
        "color": "#d6deeb",
      }
    }
  >
    <div
      className="token-line"
      style={
        {
          "backgroundColor": null,
          "color": "#d6deeb",
        }
      }
    >
      <span
        className="select-none opacity-50 pr-4 w-11 inline-block text-right"
      >
        1
      </span>
      <span>
        <span
          className="token plain"
          style={
            {
              "display": "inline-block",
            }
          }
        >
          

        </span>
      </span>
    </div>
  </pre>
</div>
`;
